--- a/projetos/index.html
+++ b/projetos/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
-    <title>Sicredi - Fundo Tech</title>
+    <link rel="stylesheet" href="animation.css">
+    <title>Sicredi</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script defer src="global.js"></script>
 </head>
@@ -93,7 +94,7 @@
         </h4>
     </div>
 </div>
-
+<a href="tech-fund.html">Investimentos</a>
 
 
 </body>
